build(Aula-01): Mudar para o ruff colocar aspas duplas

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ select = ["I", "F", "E", "W", "PL", "PT"]
 
 [tool.ruff.format]
 preview = true
-quote-style = "single"
+quote-style = "double"
 
 [tool.pytest.ini_options]
 pythonpath = "."
